--- a/src/styles/pages/_about-section.scss
+++ b/src/styles/pages/_about-section.scss
@@ -92,6 +92,7 @@
         position: relative;
         z-index: 1;
         transition: 0.3s ease-in;
+        align-items: center;
 
         p {
           padding: 0 0.4rem;
