--- a/src/styles/pages/_home-section.scss
+++ b/src/styles/pages/_home-section.scss
@@ -61,7 +61,7 @@
       display: flex;
       flex-direction: row;
       font-weight: 700;
-      font-size: 65px;
+      font-size: 60px;
       margin: 1rem 0;
       flex-wrap: wrap;
 
@@ -122,10 +122,11 @@
     @include tablet {
       align-items: center;
       margin-top: 10rem;
+      padding: 0 1rem;
     }
 
     @include mobile {
-      padding: 0 2rem;
+      padding: 0 1rem;
     }
   }
 }
